package.json modifications for heroku

--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "content-manager-app-api",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
     "dev": "node index.js"
   },
-  "author": "",
+  "author": "Enrique Cazares",
   "license": "ISC",
   "description": "",
   "dependencies": {
